--- a/ios-messaging-app/Info.plist
+++ b/ios-messaging-app/Info.plist
@@ -28,6 +28,14 @@
 				<string>com.googleusercontent.apps.774131575761-67l97i1tp2ku1js2vktk6a48ni26nvmd</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fraigo.github.io</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
